lintian (2.2.12) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - debug-symbols-directly-in-usr-lib-debug
      - file-in-discouraged-x11-font-directory
      - file-in-unknown-x11-font-directory
      - missing-separator-between-items
    + Removed:
      - missing-comma-between-items
      
  * checks/binaries{,.desc}:
    + [RA] Diagnose installing detached debugging symbols directly in
      /usr/lib/debug instead of in an appropriate subdirectory.  Patch
      from Raphael Geissert.  (Closes: #532394)
  * checks/control-file{,.desc}:
    + [ADB] Allow both comma and pipe as valid separators between items when
      detecting whether a separator has been omitted.  As a consequence,
      rename the missing-comma-between-items tag to the more descriptive
      missing-separator-between-items.  Based on a patch by Rafael
      Laboissiere.  (Closes: #533202)
    + [RA] Allow a newline immediately after the field name, since this
      does work with fields that can be wrapped (such as Build-Depends).
      Thanks, Stephane Glondu.  (Closes: #528377)
  * checks/debhelper:
    + [RA] Issue package-lacks-versioned-build-depends-on-debhelper always
      if the debhelper dependency isn't properly versioned, not just for
      compat levels newer than 5.  (Closes: #522384)
  * checks/fields{,.desc}:
    + [RA] Update source-field-malformed to serious and don't allow
      capital letters in source package names.  Check source package names
      for validity even when checking only source packages to be sure the
      package name is syntactically valid.
    + [RA] Permit quilt in Build-Depends for arch-independent packages if
      dh_quilt_* programs are called in the clean target.  Thanks, Daniel
      Moerner.  (Closes: #528003)
    + [RA] If one of the gnome-pkg-tools makefile fragments is included,
      gnome-pkg-tools is allowed and required in Build-Depends.  Thanks,
      Emilio Pozuelo Monfort.  (Closes: #532892)