@@ -1,0 +1,9 @@
+Testname: debhelper-deprecated
+Sequence: 6000
+Version: 1.0
+Description: Test for use of deprecated dh_* commands
+Test-For:
+ dh_desktop-is-deprecated
+ dh_dhelp-is-deprecated
+ dh_suidregister-is-obsolete
+ dh_testversion-is-deprecated
