@@ -1,0 +1,4 @@
+W: debhelper-deprecated source: dh_desktop-is-deprecated line 22
+W: debhelper-deprecated source: dh_dhelp-is-deprecated line 23
+W: debhelper-deprecated source: dh_suidregister-is-obsolete line 27
+W: debhelper-deprecated source: dh_testversion-is-deprecated line 17
